--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>Ramiro Castro</h2>
 										</header>
-										<p>Hi! my name is Ramiro, I am a self-taught developer interested in Data Analysis.	
+										<p>Hi! my name is Ramiro, I am a self-taught developer interested in Web development and QA.	
 										</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Proyectos</a></li>
