--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										<p>Hi! my name is Ramiro, I am a self-taught developer interested in Web development and QA.	
 										</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Proyectos</a></li>
+											<li><a href="generic.html" class="button">Projects</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -64,12 +64,16 @@
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Python</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Projects/applications with Django and Flask frameworks.
+											Data management and modification with Sqlachemy.
+											Creation of automations and scripting</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>SQL</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Projects/applications with Django and Flask frameworks.
+											Data management and modification with Sqlachemy.
+											Creation of automations and scripting</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
