--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Tools</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>These are some of the management tools that I have learned to use on
+										 a day to day basis working on different projects.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
@@ -121,7 +121,7 @@
 										<strong>OOP / Pattern design</strong>
 									</li>
 								</ul>
-								<p class="content">These are some of the management tools that I have learned to use on a day to day basis working on different projects.</p>
+								<p class="content"></p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
