--- a/generic.html
+++ b/generic.html
@@ -29,57 +29,78 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-								<h2>Studybuddy | Django | SQL</h2>
-								<p>My last application created as a project to make a work where all the knowledge that I generated in the last years of programming is applied.
+								<h2>Studybuddy | Python | Django | SQL</h2>
+								<p>This is my last application created as a project to make a project where all the knowledge that I generated in the last years of programming is applied.
 									Studdybud is a social application for students, where they can create different rooms for topics related to programming, and within them leave comments to connect with each other.
 								</p>
+								<ul class="actions">
+									<li><a href="https://studybuddjangoapp.herokuapp.com/" class="button">Live project</a></li>
+									<li><a href="https://github.com/ramirocastro1995/djangoapp-studybud" class="button">Code</a></li>
+								</ul>
 								<p></p>
-								<h2>Notekeep | Flask | SQL</h2>
-								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+								<h2>Notekeep | Python | Flask | SQL</h2>
+								<p>A project created with the Flask framework as part of a personal initiative to create a dashboard to put notes where different people can add information to it.
+									Sqlalchemy was used to manage the database.
+								</p>
+								<ul class="actions">
+									<li><a href="https://notekeeperflask.herokuapp.com/" class="button">Live project</a></li>
+									<li><a href="https://github.com/ramirocastro1995/Notekeep-with-Flask" class="button">Code</a></li>
+								</ul>
+								<p></p>
+								<h2>LinksJS | Javascript | CSS | HTML </h2>
+								<p>As part of learning to program is to be able to adapt to different environments, I created this project to improve my skills with Javascript, html and css. It also helped me to learn the functionalities of the browser.
+									This is a browser extension to save links that you need to use again.
+								</p>
+								<ul class="actions">
+									<li><a href="https://chrome.google.com/webstore/detail/linksjs/ehnifcacnaiaoalipnbpfioiajchgkac?hl=en" class="button">Download</a></li>
+									<li><a href="https://github.com/ramirocastro1995/LinkeeperJS" class="button">Code</a></li>
+								</ul>
+								<p></p>
+								
 							</section>
 
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+				<!-- Footer -->
+				<footer id="footer">
+					<section>
+						<h2>For Hire!</h2>
+						<p>I'm available for Back-end, Front-end and QA automation jobs, if you have any proposal available don't hesitate to contact me!</p>
+						<ul class="actions">
+							<li><a href="generic.html" class="button">Learn More</a></li>
+						</ul>
+					</section>
+					<section>
+						<h2>Contact Info</h2>
+						<dl class="alt">
+							<dt>Address</dt>
+							<dd>Banfield &bull; Buenos Aires</dd>
+							<dt>Phone</dt>
+							<dd>(+54)91122519386</dd>
+							<dt>Email</dt>
+							<dd><a href="#">ramirosalvadorcastro95@hotmail.com</a></dd>
+						</dl>
+						<ul class="icons">
+							<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+						</ul>
+					</section>
+				</footer>
 
-			</div>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
