--- a/generic.html
+++ b/generic.html
@@ -28,14 +28,14 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<!--<span class="image main"><img src="images/Python-Language.jpg" alt="" /></span>-->
 								<h2>Studybuddy | Python | Django | SQL</h2>
 								<p>This is my last application created as a project to make a project where all the knowledge that I generated in the last years of programming is applied.
 									Studdybud is a social application for students, where they can create different rooms for topics related to programming, and within them leave comments to connect with each other.
 								</p>
 								<ul class="actions">
-									<li><a href="https://studybuddjangoapp.herokuapp.com/" class="button">Live project</a></li>
-									<li><a href="https://github.com/ramirocastro1995/djangoapp-studybud" class="button">Code</a></li>
+									<li><a href="https://studybuddjangoapp.herokuapp.com/" class="button" target = "_Blank">Live project</a></li>
+									<li><a href="https://github.com/ramirocastro1995/djangoapp-studybud" class="button" target = "_Blank">Code</a></li>
 								</ul>
 								<p></p>
 								<h2>Notekeep | Python | Flask | SQL</h2>
@@ -43,8 +43,8 @@
 									Sqlalchemy was used to manage the database.
 								</p>
 								<ul class="actions">
-									<li><a href="https://notekeeperflask.herokuapp.com/" class="button">Live project</a></li>
-									<li><a href="https://github.com/ramirocastro1995/Notekeep-with-Flask" class="button">Code</a></li>
+									<li><a href="https://notekeeperflask.herokuapp.com/" class="button" target = "_Blank">Live project</a></li>
+									<li><a href="https://github.com/ramirocastro1995/Notekeep-with-Flask" class="button" target = "_Blank">Code</a></li>
 								</ul>
 								<p></p>
 								<h2>LinksJS | Javascript | CSS | HTML </h2>
@@ -52,8 +52,8 @@
 									This is a browser extension to save links that you need to use again.
 								</p>
 								<ul class="actions">
-									<li><a href="https://chrome.google.com/webstore/detail/linksjs/ehnifcacnaiaoalipnbpfioiajchgkac?hl=en" class="button">Download</a></li>
-									<li><a href="https://github.com/ramirocastro1995/LinkeeperJS" class="button">Code</a></li>
+									<li><a href="https://chrome.google.com/webstore/detail/linksjs/ehnifcacnaiaoalipnbpfioiajchgkac?hl=en" class="button" target = "_Blank">Download</a></li>
+									<li><a href="https://github.com/ramirocastro1995/LinkeeperJS" class="button" target = "_Blank">Code</a></li>
 								</ul>
 								<p></p>
 								
@@ -85,7 +85,7 @@
 							<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/ramirocastro1995" class="icon brands fa-github alt" target = "_Blank"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
 						</ul>
 					</section>
