--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">About Me</a></li>
-							<li><a href="#first">Ability</a></li>
-							<li><a href="#second">Professional Experience</a></li>
-							<li><a href="#cta">Contact</a></li>
+							<li><a href="#first">Development Languages</a></li>
+							<li><a href="#second">Tools</a></li>
+							<li><a href="#cta">Works/Projects</a></li>
 						</ul>
 					</nav>
 
