--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>Javascript/Nodejs</h3>
-										<p>Creation of applications and web pages using React 
-											for the front-end and Nodejs for the backend.</p>
+										<h3>Java</h3>
+										<p>Creation of applications and REST apis using Springboot</p>
 									</li>
 								</ul>
 								<footer class="major">
