--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Welcome!</h1>
 						<p>My name is Ramiro<br />
-						<p>Backend Developer Jr</p>
+						<p>Backend Developer</p>
 					</header>
 
 				<!-- Nav -->
@@ -45,7 +45,9 @@
 										<header class="major">
 											<h2>Ramiro Castro</h2>
 										</header>
-										<p>Hi! my name is Ramiro, I am a self-taught developer interested in Web development and QA.	
+										<p>My name is Ramiro, im a Web Developer with 3 of experience in crafting and improving web applications.	
+										</p>
+										<p>Other areas of work in which I have experience are Automation and Operations.	
 										</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Projects</a></li>
