--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>Ramiro Castro</h2>
 										</header>
-										<p>My name is Ramiro, im a Web Developer with 3 of experience in crafting and improving web applications.	
+										<p>My name is Ramiro, im a Web Developer with 3 years of experience in crafting and improving web applications.	
 										</p>
 										<p>Other areas of work in which I have experience are Automation and Operations.	
 										</p>
@@ -65,14 +65,19 @@
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Python</h3>
-										<p>Projects/applications with Django and Flask frameworks.
-											Data management and modification with Sqlachemy.
+										<h3>ASP.NET | C#</h3>
+										<p>Projects/applications with ASP.NET frameworks.
+											Data management and modification with SQL Server.
 											Creation of automations and scripting</p>
 									</li>
 									<li>
+										<span class="icon major style5 fa-gem"></span>
+										<h3>Angular | Javascript</h3>
+										<p>Web applications for c# api</p>
+									</li>
+									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>SQL</h3>
+										<h3>SQL Server</h3>
 										<p>Querying and creation of tables
 											Advanced scripting and data managing
 											in the context of web applications.
@@ -80,9 +85,10 @@
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>Java</h3>
+										<h3>Springboot | Java</h3>
 										<p>Creation of applications and REST apis using Springboot</p>
 									</li>
+									
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
