--- a/generic.html
+++ b/generic.html
@@ -34,7 +34,7 @@
 									Studdybud is a social application for students, where they can create different rooms for topics related to programming, and within them leave comments to connect with each other.
 								</p>
 								<ul class="actions">
-									<li><a href="https://studybuddjangoapp.herokuapp.com/" class="button" target = "_Blank">Live project</a></li>
+									<li><a href="https://studybud-vmib.onrender.com/" class="button" target = "_Blank">Live project</a></li>
 									<li><a href="https://github.com/ramirocastro1995/djangoapp-studybud" class="button" target = "_Blank">Code</a></li>
 								</ul>
 								<p></p>
@@ -43,7 +43,7 @@
 									Sqlalchemy was used to manage the database.
 								</p>
 								<ul class="actions">
-									<li><a href="https://notekeeperflask.herokuapp.com/" class="button" target = "_Blank">Live project</a></li>
+									<li><a href="https://notekeep-2ak8.onrender.com/" class="button" target = "_Blank">Live project</a></li>
 									<li><a href="https://github.com/ramirocastro1995/Notekeep-with-Flask" class="button" target = "_Blank">Code</a></li>
 								</ul>
 								<p></p>
