--- a/generic.html
+++ b/generic.html
@@ -29,9 +29,18 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<!--<span class="image main"><img src="images/Python-Language.jpg" alt="" /></span>-->
+								h2>LibraryApp | C# | ASP.NET | SQL Server | Azure </h2>
+								<p>BulkyMvc is a comprehensive web-based book store application built with ASP.NET MVC. It allows users to browse, search, and purchase books online. 
+									Administrators can manage the inventory, categories, and orders through an intuitive administrative interface.
+								</p>
+								<ul class="actions">
+									<li><a href="bulkymvc-2024.azurewebsites.net" class="button" target = "_Blank">Live project</a></li>
+									<li><a href="https://github.com/ramirocastro1995/Bulky_MVC" class="button" target = "_Blank">Code</a></li>
+								</ul>
+								<p></p>
+								
 								<h2>Studybuddy | Python | Django | SQL</h2>
-								<p>This is my last application created as a project to make a project where all the knowledge that I generated in the last years of programming is applied.
-									Studdybud is a social application for students, where they can create different rooms for topics related to programming, and within them leave comments to connect with each other.
+								<p>Studdybud is a social application for students, where they can create different rooms for topics related to programming, and within them leave comments to connect with each other.
 								</p>
 								<ul class="actions">
 									<li><a href="https://studybud-vmib.onrender.com/" class="button" target = "_Blank">Live project</a></li>
