--- a/generic.html
+++ b/generic.html
@@ -29,7 +29,7 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<!--<span class="image main"><img src="images/Python-Language.jpg" alt="" /></span>-->
-								h2>LibraryApp | C# | ASP.NET | SQL Server | Azure </h2>
+								<h2>LibraryApp | C# | ASP.NET | SQL Server | Azure </h2>
 								<p>BulkyMvc is a comprehensive web-based book store application built with ASP.NET MVC. It allows users to browse, search, and purchase books online. 
 									Administrators can manage the inventory, categories, and orders through an intuitive administrative interface.
 								</p>
