--- a/index.html
+++ b/index.html
@@ -64,19 +64,22 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<span class="image"><img src="images/clogo.png" width="150" 
+											height="150" alt="" /></span>
 										<h3>ASP.NET | C#</h3>
 										<p>Projects/applications with ASP.NET frameworks.
 											Data management and modification with SQL Server.
 											Creation of automations and scripting</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+										<span class="image"><img src="images/angular.png" width="200" 
+											height="150" alt="" /></span>
 										<h3>Angular | Javascript</h3>
 										<p>Web applications for c# api</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="image"><img src="images/sql.png" width="150" 
+											height="150" alt="" /></span>
 										<h3>SQL Server</h3>
 										<p>Querying and creation of tables
 											Advanced scripting and data managing
@@ -84,7 +87,8 @@
 										</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+										<span class="image"><img src="images/java.png" width="200" 
+											height="200" alt="" /></span>
 										<h3>Springboot | Java</h3>
 										<p>Creation of applications and REST apis using Springboot</p>
 									</li>
