--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<span class="image"><img src="images/angular.png" width="200" 
 											height="150" alt="" /></span>
 										<h3>Angular | Javascript</h3>
-										<p>Web applications for c# api</p>
+										<p>Web applications frontend for c# api</p>
 									</li>
 									<li>
 										<span class="image"><img src="images/sql.png" width="150" 
