--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<li>
 										<span class="image"><img src="images/angular.png" width="200" 
 											height="150" alt="" /></span>
-										<h3>Angular | Javascript</h3>
+										<h3>Angular | Typescript</h3>
 										<p>Web applications frontend for c# api</p>
 									</li>
 									<li>
